# kitchen_robot

./: README.md  main.py  params.yaml  pyproject.toml
artifacts/data_ingestion/2024-02 Machine Learning Engineer/: environmental_variables_data.csv  historical_cooking_data.csv  user_feedback_data.csv
artifacts/model_evaluation/: model_performance_report.json
artifacts/model_training/: updated_model.pth
artifacts/prepare_dataset/: test_data.csv  test_dataset.pth  train_eval_data.csv  train_eval_dataset.pth
artifacts/prepare_model/: base_model.pth
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_prepare_dataset.ipynb  03_prepare_model.ipynb  04_model_training.ipynb  trials.ipynb
src/kitchen_robot/: __init__.py
src/kitchen_robot/components/: data_ingestion.py  model_evaluation.py  model_inference.py  model_training.py  prepare_dataset.py  prepare_model.py
src/kitchen_robot/config/: configuration.py
src/kitchen_robot/entity/: config_entity.py
src/kitchen_robot/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_dataset.py  stage_03_prepare_model.py  stage_04_model_training.py  stage_05_model_evaluation.py  stage_06_model_inference.py
src/kitchen_robot/utils/: common.py
